welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
	if(isSummer=false){
	if(temp<=60 && temp>=90)
	return 
else return false}
else{
	if(temps <=60 && temp>=100 && isSummer=true)
	return true
	else
	return false}
}
